# serial_ros

./: CMakeLists.txt  LICENSE  ReadMe.md  package.xml
include/serial_comm/: serial_comm.h
launch/: matlab.launch  matlab2_terminal.launch  matlab_terminal.launch  matlab_usb0_read_state.launch  matlab_usb1_send_cmd.launch  test_usb1_read_state.launch  uav.launch  uav1_terminal.launch  uav2_terminal.launch  uav_terminal.launch  uav_usb0_read_cmd.launch  uav_usb0_send_state.launch  uav_usb1_read_cmd.launch  uav_usb1_send_state.launch
msg/: Cmd_uav.msg  State_uav.msg
src/: serial_comm.cpp  serial_ros.h  serial_ros_node.cpp  serial_ros_r_cmd.h  serial_ros_r_cmd_node.cpp  serial_ros_r_state.h  serial_ros_r_state_node.cpp  serial_ros_t_cmd.h  serial_ros_t_cmd_node.cpp  serial_ros_t_state.h  serial_ros_t_state_node.cpp
